# k8s-virtual-coffee

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  localstack-setup.sh  start-dynamodb-local.sh
.github/workflows/: documentation.yml
.kiro/settings/: mcp.json
.kiro/specs/virtual-coffee-platform/: design.md  requirements.md  tasks.md
.kiro/steering/: auto-commit-tasks.md  pre-commit-hooks.md
backend/api/: main.py  requirements.txt
backend/api/auth/: __init__.py  jwt.py  middleware.py  oauth.py  routes.py
backend/api/models/: config.py  match.py  user.py
backend/api/repositories/: __init__.py  base.py  config_repository.py  dynamodb_connection.py  match_repository.py  user_repository.py
backend/api/routes/: match_routes.py  user_routes.py
backend/api/scheduler/: __init__.py  run_matching.py  scheduler.py  send_notifications.py
backend/api/services/: config_service.py  email_templates.py  matching_service.py  notification_channels.py  notification_service.py  user_service.py
backend/api/tests/: test_auth.py  test_aws_resource_provisioning.py  test_config_service.py  test_configuration_validation.py  test_matching_service.py  test_models.py  test_notification_service.py  test_oauth.py  test_repositories.py  test_scheduler.py  test_user_api.py  test_user_service.py
crossplane/compositions/: dynamodb-composition.yaml
crossplane/definitions/: dynamodb-definition.yaml
crossplane/providers/: aws-controller-config.yaml  aws-provider.yaml
docs/: admin-guide.md  crossplane-resources.md  deployment-validation.md  installation-guide.md  makefile-usage.md  operations-guide.md  troubleshooting-guide.md  user-guide.md
docs-site/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs-site/docs/admin-guide/: introduction.md  user-management.md
docs-site/docs/deployment/: crossplane-resources.md  installation.md  makefile-usage.md  operations.md  troubleshooting.md  validation.md
docs-site/docs/user-guide/: getting-started.md  introduction.md  matches.md  notifications.md  preferences.md  troubleshooting.md
docs-site/src/pages/: index.js  index.module.css
docs-site/static/: CNAME
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.tsx  index.tsx
frontend/src/components/: Header.js  Header.tsx  ProtectedRoute.js  ProtectedRoute.tsx
k8s/argocd/: root-application.yaml
k8s/base/: kustomization.yaml  namespace.yaml
scripts/: system_integration_test.py  validate_deployment.py
(+33 files in other folders)
